[gd_scene load_steps=2 format=3 uid="uid://dq2d125kftur6"]

[ext_resource type="Script" uid="uid://c2jyudi8823qj" path="res://panel/peer_item_control.gd" id="1_2007k"]

[node name="PeerControl" type="MarginContainer"]
offset_right = 202.0
offset_bottom = 38.0
script = ExtResource("1_2007k")

[node name="Button" type="Button" parent="."]
layout_mode = 2
theme_type_variation = &"FlatButton"
alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="StateColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderMedium"
text = "PEER_ID"
text_overrun_behavior = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
